--- a/app/femr/ui/views/partials/helpers/outputHeightOrNA.scala.html
+++ b/app/femr/ui/views/partials/helpers/outputHeightOrNA.scala.html
@@ -3,6 +3,7 @@
 @if((feet == null && inches == null) || (feet.equals("0") && inches.equals("0"))){
     @emptyValue
 } else {
+
     @if(isMetric) {
         @if(feet == null || inches == null || feet.equals("null") || inches.equals("null")) {
             @emptyValue
@@ -22,8 +23,9 @@
         }
 
         @* Output empty value if feet and inches are equal to "null" string *@
-        @if((inches != null && feet != null) && (inches.equals("null") && feet.equals("null"))) {
+        @if((inches != null && feet != null) || (inches.equals("null") && feet.equals("null"))) {
             @emptyValue
         }
     }
+
 }
